force-app/main/default/objects/Product2/fields/Actual_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Actual_Unit_Price__c</fullName>
    <description>Unit Price before Discount</description>
    <label>Actual Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>