force-app/main/default/objects/Product2/fields/CRMRERecordID__c.field-meta.xml
<CustomField>
    <fullName>CRMRERecordID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>CRM RE</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>