force-app/main/default/objects/Product2/fields/House__c.field-meta.xml
<CustomField>
    <fullName>House__c</fullName>
    <label>House Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>