force-app/main/default/objects/Product2/fields/Model_Type__c.field-meta.xml
<CustomField>
    <fullName>Model_Type__c</fullName>
    <label>Model Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 BedRoom</fullName>
            </value>
            <value>
                <fullName>1 Bedroom  private garden</fullName>
            </value>
            <value>
                <fullName>1 Bedroom H</fullName>
            </value>
            <value>
                <fullName>1 Bedroom hybrid</fullName>
            </value>
            <value>
                <fullName>1 Bedroom Plus</fullName>
            </value>
            <value>
                <fullName>2 BedRoom</fullName>
            </value>
            <value>
                <fullName>2 Bedroom 1 Bathroom</fullName>
            </value>
            <value>
                <fullName>2 Bedroom 2 Bathroom</fullName>
            </value>
            <value>
                <fullName>2 Bedroom H</fullName>
            </value>
            <value>
                <fullName>2 Bedroom Hybird</fullName>
            </value>
            <value>
                <fullName>2 Bedroom Plus</fullName>
            </value>
            <value>
                <fullName>2 Bedroom private pool access</fullName>
            </value>
            <value>
                <fullName>3 Bedroom</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Duplex 1 Bedroom</fullName>
            </value>
            <value>
                <fullName>Duplex 1 Bedroom Plus</fullName>
            </value>
            <value>
                <fullName>Duplex 2 Bedroom</fullName>
            </value>
            <value>
                <fullName>Duplex 3 Bedroom</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
            <value>
                <fullName>SHOP</fullName>
            </value>
            <value>
                <fullName>SHOP HOUSE</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Studio H</fullName>
            </value>
            <value>
                <fullName>Studio hybrid</fullName>
            </value>
            <value>
                <fullName>Town Villa</fullName>
            </value>
            <value>
                <fullName>Twist 1 Bedroom Plus</fullName>
            </value>
            <value>
                <fullName>Twist 2 Bed 1 Bath</fullName>
            </value>
            <value>
                <fullName>Twist 2 Bed 2 Bath</fullName>
            </value>
            <value>
                <fullName>UT-16A</fullName>
            </value>
            <value>
                <fullName>UT-18A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>