force-app/main/default/objects/Product2/fields/Price_per_sqm__c.field-meta.xml
<CustomField>
    <fullName>Price_per_sqm__c</fullName>
    <label>Price/Sq.m</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>