force-app/main/default/objects/Product2/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <label>Tower</label>
    <length>10</length>
    <type>Text</type>
</CustomField>