force-app/main/default/objects/Product2/fields/Unit_Area__c.field-meta.xml
<CustomField>
    <fullName>Unit_Area__c</fullName>
    <label>Unit Area (Sq.m.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>