force-app/main/default/objects/Product2/fields/Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Unit_Code__c</fullName>
    <externalId>true</externalId>
    <label>Unit Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>