force-app/main/default/objects/Product2/fields/Unit_Owner__c.field-meta.xml
<CustomField>
    <fullName>Unit_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>