force-app/main/default/objects/Product2/fields/Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Unit_Status__c</fullName>
    <label>Unit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <label>ว่าง/Available</label>
            </value>
            <value>
                <fullName>Booking</fullName>
                <label>แปลงจอง</label>
            </value>
            <value>
                <fullName>Contract</fullName>
                <label>ทำสัญญาแล้ว</label>
            </value>
            <value>
                <fullName>Down</fullName>
                <label>โอนกรรมสิทธิ์</label>
            </value>
            <value>
                <fullName>Transfer</fullName>
                <label>โอนกรรมสิทธิ์(จบสัญญา)</label>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>แปลงว่างจากการยกเลิก</fullName>
                <isActive>false</isActive>
                <label>แปลงว่างจากการยกเลิก</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>