force-app/main/default/objects/Product2/fields/Unit_Title_Deed__c.field-meta.xml
<CustomField>
    <fullName>Unit_Title_Deed__c</fullName>
    <description>Aor Chor Area</description>
    <label>Unit Title Deed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>