force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Project__c</columns>
    <columns>Unit_Status__c</columns>
    <columns>Model_Type__c</columns>
    <columns>Unit_Area__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit_Status__c</field>
        <operation>equals</operation>
        <value>Available,Booking</value>
    </filters>
    <label>All</label>
</ListView>